Work on submit event and preventDefault

--- a/animation.html
+++ b/animation.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="zonkbox">
-      <p class="zonkC" id="zonkT"><?=getText?></p>
+      <p id="zonkT">nothing</p>
     </div>
 
     <div class="animation">
@@ -17,5 +17,6 @@
         <img src="image0.gif" />
       </div>
     </div>
+    <script src="js.js"></script>
   </body>
 </html>
