--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <body>
     <main>
       <div>
-        <form action="animation.html">
+        <form action="animation.html" id="nameForm">
           <label for="name">Radio Talk?</label>
           <input type="text" id="name" name="aname" required />
           <div class="buttonbox">
-            <button onclick="inputText()">Submit</button>
+            <button>Submit</button>
           </div>
         </form>
+        <div class="zonkC"></div>
       </div>
     </main>
     <script src="js.js"></script>
