Fix js to choose page based on value in input box

--- a/A.html
+++ b/A.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <div class="zonkbox">
-      <p id="zonkT">nothing</p>
+      <p id="zonk">nothing</p>
     </div>
 
     <div class="animation">
       <div class="animbox">
         <img src="image0.gif" />
+      </div>
       </div>
     </div>
     <script src="js.js"></script>
