--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <main>
       <div>
-        <form action="animation.html" id="nameForm">
-          <label for="name">Radio Talk?</label>
-          <input type="text" id="name" name="aname" required />
+        <form id="nameForm">
+          <label for="name" class="form">Radio Talk?</label>
+          <input type="text" id="nameF" name="family" required />
           <div class="buttonbox">
             <button>Submit</button>
           </div>
         </form>
-        <div class="zonkC"></div>
+        <p id="zonk"></p>
       </div>
     </main>
     <script src="js.js"></script>
