Edit css style for animation page

--- a/A.html
+++ b/A.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <main>
     <div class="zonkbox">
-      <p id="zonk">nothing</p>
+      <div id="zonk">nothing</div>
     </div>
-
     <div class="animation">
       <div class="animbox">
         <img src="image0.gif" />
       </div>
       </div>
-    </div>
+    </main>
+    
     <script src="js.js"></script>
   </body>
 </html>
