Change main slogan

--- a/A.html
+++ b/A.html
@@ -10,7 +10,7 @@
   <body>
     <main>
     <div class="zonkbox">
-      <div id="zonk">nothing</div>
+      <div id="zonk">something</div>
     </div>
     <div class="animation">
       <div class="animbox">
