Change rest of the pages

--- a/A.html
+++ b/A.html
@@ -10,7 +10,7 @@
   <body>
     <main>
     <div class="zonkbox">
-      <div id="zonk">something</div>
+      <div id="zonk">7894</div>
     </div>
     <div class="animation">
       <div class="animbox">
@@ -19,6 +19,6 @@
       </div>
     </main>
     
-    <script src="js.js"></script>
+   
   </body>
 </html>
