--- a/L.html
+++ b/L.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L</title>
-</head>
-<body>
-    <h1>L</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <title>Animation</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main>
+    <div class="zonkbox">
+      <div id="zonk">4561</div>
+    </div>
+    <div class="animation">
+      <div class="animbox">
+        <img src="image0.gif" />
+      </div>
+      </div>
+    </main>
+    
+   
+  </body>
 </html>
