--- a/A.html
+++ b/A.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main>
+    <main class="main">
     <div class="zonkbox">
       <div id="zonk">7894</div>
     </div>
