--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Anima</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main>
-      <div>
+    <section>
+      <div class="formbox">
+          <div class="formcontainer">
         <form id="nameForm">
           <label for="name" class="form">Radio Talk?</label>
           <input type="text" id="nameF" name="family" required />
+        </div>
           <div class="buttonbox">
             <button>Submit</button>
           </div>
         </form>
-        <p id="zonk"></p>
+    
       </div>
     </main>
     <script src="js.js"></script>
