Add new animation change names

--- a/A.html
+++ b/A.html
@@ -10,11 +10,11 @@
   <body>
     <main class="main">
     <div class="zonkbox">
-      <div id="zonk">7894</div>
+      <div id="zonk">for Ania</div>
     </div>
     <div class="animation">
       <div class="animbox">
-        <img src="image0.gif" />
+        <img src="heart.png" />
       </div>
       </div>
     </main>
