--- a/P.html
+++ b/P.html
@@ -10,11 +10,11 @@
   <body>
     <main>
     <div class="zonkbox">
-      <div id="zonk">1234</div>
+      <div id="zonk">for Pola</div>
     </div>
     <div class="animation">
       <div class="animbox">
-        <img src="image0.gif" />
+        <img src="heart.png" />
       </div>
       </div>
     </main>
