Fix style and the flex box now looks good on any screen

--- a/L.html
+++ b/L.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main>
+      <div class="extra"></div>
     <div class="zonkbox">
       <div id="zonk">for Lena</div>
     </div>
