--- a/A.html
+++ b/A.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="extra"></div>
     <main class="main">
     <div class="zonkbox">
       <div id="zonk">for Ania</div>
