--- a/index.html
+++ b/index.html
@@ -3,29 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anima</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section class="bigbox">
-      <div class="formbox">
-          <div class="formcontainer">
-        <form id="nameForm">
-          <div class="labelbox">
-            <label for="name" class="form">Your Name</label>
-          </div>
-          <div class="inputbox">
-          <input type="text" id="nameF" name="family"  required />
-        </div>
-        </div>
-          <div class="buttonbox">
-            <button>Submit</button>
-          </div>
-        </form>
-    
+    <section>
+      <form id="nameForm">
+        <label for="name" class="form">Your Name</label>
+        <div class="inputbox">
+        <input type="text" id="nameF" name="family" required />
       </div>
-    </main>
+        <button>Submit</button>
+      </form>
+    </section>
+
     <script src="js.js"></script>
   </body>
 </html>
