Connect Label and form

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <section>
       <form id="nameForm">
-        <label for="name" class="form">Your Name</label>
+        <label for="nameF" class="form">Your Name</label>
         <div class="inputbox">
-        <input type="text" id="nameF" name="family" required />
+        <input type="text" id="nameF" name="family"  required />
       </div>
         <button>Submit</button>
       </form>
