Add js local storage to save input box value

--- a/A.html
+++ b/A.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="extra"></div>
+    <p></p>
     <main class="main">
-    <div class="zonkbox">
-      <div id="zonk">for Ania</div>
-    </div>
-    <div class="animation">
-      <div class="animbox">
-        <img src="heart.png" />
+      <div class="extra"></div>
+      <div class="zonkbox">
+         For &nbsp <span id="zonk">Name</span><br>
+       
       </div>
+      <div class="animation">
+        <div class="animbox">
+          <img src="heart.png" />
+        </div>
       </div>
     </main>
-    
-   
+    <script src="ascript.js"></script>
   </body>
 </html>
