--- a/indexOrg.html
+++ b/indexOrg.html
@@ -9,14 +9,15 @@
   </head>
   <body>
     <section>
-      <form id="nameForm" action="A.html">
-        <label for="name" class="form">Your Name</label>
+      <form id="nameForm" action="A.html" >
+        <label for="nameF" class="form">Your Name</label>
         <div class="inputbox">
-          <input type="text" id="name" name="name" required />
-        </div>
-        <button type="submit" value="Submit" onclick="getData()">Submit</button>
+        <input type="text" id="nameF" name="family"required />
+      </div>
+        <button>Submit</button>
       </form>
     </section>
-    <script src="jsN.js"></script>
+
+    <script src="js.js"></script>
   </body>
 </html>
